@@ -8,19 +8,15 @@ set +h
 . /etc/alps/directories.conf
 
 #REQ:openjdk
-#REQ:glib2
-#REQ:java
 
 
 cd $SOURCE_DIR
 
-wget -nc https://archive.apache.org/dist/ant/source/apache-ant-1.10.6-src.tar.xz
 
 
 NAME=apache-ant
-VERSION=1.10.
-URL=https://archive.apache.org/dist/ant/source/apache-ant-1.10.6-src.tar.xz
-SECTION="Miscellaneous"
+VERSION=1.9.14
+
 
 if [ ! -z $URL ]
 then
@@ -38,39 +34,14 @@ fi
 cd $DIRECTORY
 fi
 
-echo $USER > /tmp/currentuser
-
-
-sed -i 's/--add-modules java.activation/-html4/' build.xml
-./bootstrap.sh
-bootstrap/bin/ant -f fetch.xml -Ddest=optional
-./build.sh -Ddist.dir=$PWD/ant-1.10.6 dist
-sudo rm -rf /tmp/rootscript.sh
-cat > /tmp/rootscript.sh <<"ENDOFROOTSCRIPT"
-cp -rv ant-1.10.6 /opt/            &&
-chown -R root:root /opt/ant-1.10.6 &&
-ln -sfv ant-1.10.6 /opt/ant
-ENDOFROOTSCRIPT
-
-chmod a+x /tmp/rootscript.sh
-sudo /tmp/rootscript.sh
-sudo rm -rf /tmp/rootscript.sh
-
-sudo rm -rf /tmp/rootscript.sh
-cat > /tmp/rootscript.sh <<"ENDOFROOTSCRIPT"
-cat > /etc/profile.d/ant.sh << EOF
-# Begin /etc/profile.d/ant.sh
-
-pathappend /opt/ant/bin
-export ANT_HOME=/opt/ant
-
-# End /etc/profile.d/ant.sh
+version=1.9.14
+wget https://www-us.apache.org/dist//ant/binaries/apache-ant-$version-bin.tar.bz2
+dir=$(tar tf apache-ant-$version-bin.tar.bz2 | cut -d/ -f1 | uniq)
+sudo tar xf apache-ant-$version-bin.tar.bz2 -C /opt/
+sudo tee /etc/profile.d/ant.sh<<EOF
+export PATH=$PATH:/opt/$dir/bin
 EOF
-ENDOFROOTSCRIPT
 
-chmod a+x /tmp/rootscript.sh
-sudo /tmp/rootscript.sh
-sudo rm -rf /tmp/rootscript.sh
 
 
 
